@@ -1,4 +1,8 @@
-﻿shmuel 31.12.2014 00:11:10 +0200 - build 463
+﻿shmuel 01.01.2015 20:34:10 +0200 - build 464
+
+1. Рефакторинг.
+
+shmuel 31.12.2014 00:11:10 +0200 - build 463
 
 1. Far.DisableHistory(-1) не запрещал добавления в историю при последующих вызовах Panel.SetPath().
 
